crates/uv-distribution-filename/src/wheel/snapshots/uv_distribution_filename__wheel__tests__ok_multiple_tags.snap
---
source: crates/uv-distribution-filename/src/wheel/tests.rs
expression: "WheelFilename::from_str(\"foo-1.2.3-ab.cd.ef-gh-ij.kl.mn.op.qr.st.whl\")"
---
Ok(
    WheelFilename {
        name: PackageName(
            "foo",
        ),
        version: "1.2.3",
        build_tag: None,
        python_tag: [
            "ab",
            "cd",
            "ef",
        ],
        abi_tag: [
            "gh",
        ],
        platform_tag: [
            "ij",
            "kl",
            "mn",
            "op",
            "qr",
            "st",
        ],
    },
)
